WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179562
We should ensure that operationStrCat2 and operationStrCat3 are never passed Symbols as arguments.
https://bugs.webkit.org/show_bug.cgi?id=179562
Summary
We should ensure that operationStrCat2 and operationStrCat3 are never passed ...
Mark Lam
Reported
2017-11-10 16:46:02 PST
Patch coming soon. <
rdar://problem/35467022
>
Attachments
proposed patch.
(10.70 KB, patch)
2017-11-10 17:42 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2017-11-10 17:42:26 PST
Created
attachment 326667
[details]
proposed patch.
Saam Barati
Comment 2
2017-11-10 17:47:53 PST
Comment on
attachment 326667
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=326667&action=review
r=me
> Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:205 > + m_insertionSet.insertNode( > + m_indexInBlock, SpecNone, Check, node->origin, > + Edge(edge.node(), NotSymbolUse));
Might be worth a comment saying why we do this.
Mark Lam
Comment 3
2017-11-10 17:48:37 PST
(In reply to Saam Barati from
comment #2
)
> > Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:205 > > + m_insertionSet.insertNode( > > + m_indexInBlock, SpecNone, Check, node->origin, > > + Edge(edge.node(), NotSymbolUse)); > > Might be worth a comment saying why we do this.
Thanks. I will add the comment.
Mark Lam
Comment 4
2017-11-12 07:35:02 PST
Landed in
r224735
: <
http://trac.webkit.org/r224735
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug